<resources>

    <string name="default_web_client_id">235014796376-ni2tbhlhvb6cjr8c9fo9134hplfvpbaa.apps.googleusercontent.com</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo Eletronico</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account_sign_in">no_tiene_una_cuenta_iniciar_sesión</string>
    <string name="login_with_google">iniciar sesión con Google</string>
    <string name="bienvenidos">Bienvenidos!</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="signed">signed</string>
    <string name="already_have_an_account_login">ya_tienes_una_cuenta_inicia_sesion</string>
    <string name="app_name">proyecto_de_catedra</string>
</resources>
